feat: Searh View - 자동검색완료

--- a/WeatherForecast/WeatherForecast/View/DetailView/CurrentWeather/CurrentWeatherSectionHeaderView.xib
+++ b/WeatherForecast/WeatherForecast/View/DetailView/CurrentWeather/CurrentWeatherSectionHeaderView.xib
@@ -16,7 +16,7 @@
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="현재날씨" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lJc-HH-qah">
                     <rect key="frame" x="30" y="0.0" width="490" height="61"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                     <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
