--- a/WeatherForecast/WeatherForecast/WeatherForecast/Base.lproj/Main.storyboard
+++ b/WeatherForecast/WeatherForecast/WeatherForecast/Base.lproj/Main.storyboard
@@ -489,7 +489,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="K4k-Gw-bP5"/>
+        <segue reference="v87-tv-4IP"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="background" width="580" height="1031"/>
